kubernetes/manifests/infrastructure/jenkins-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-svc
spec:
  ports:
  - name: http-jenkins-port
    port: 9000
    targetPort: 8080
  type: ClusterIP
  selector:
    appName: jenkins-dep
