kubernetes/manifests/infrastructure/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cluster-ingress
  namespace: berkeleytime
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    certmanager.k8s.io/issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: http01
    nginx.ingress.kubernetes.io/server-snippet: |
      set $mobile_rewrite do_not_perform;

      ## chi http_user_agent for mobile / smart phones ##
      if ($http_user_agent ~* "(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|iris|kindle|lge |maemo|midp|mmp|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows (ce|phone)|xda|xiino") {
        set $mobile_rewrite perform;
      }
       
      if ($http_user_agent ~* "^(1207|6310|6590|3gso|4thp|50[1-6]i|770s|802s|a wa|abac|ac(er|oo|s\-)|ai(ko|rn)|al(av|ca|co)|amoi|an(ex|ny|yw)|aptu|ar(ch|go)|as(te|us)|attw|au(di|\-m|r |s )|avan|be(ck|ll|nq)|bi(lb|rd)|bl(ac|az)|br(e|v)w|bumb|bw\-(n|u)|c55\/|capi|ccwa|cdm\-|cell|chtm|cldc|cmd\-|co(mp|nd)|craw|da(it|ll|ng)|dbte|dc\-s|devi|dica|dmob|do(c|p)o|ds(12|\-d)|el(49|ai)|em(l2|ul)|er(ic|k0)|esl8|ez([4-7]0|os|wa|ze)|fetc|fly(\-|_)|g1 u|g560|gene|gf\-5|g\-mo|go(\.w|od)|gr(ad|un)|haie|hcit|hd\- [...]
        set $mobile_rewrite perform;
      }
      
      if ($host != old.berkeleytime-internal.com) {
        set $mobile_rewrite "${mobile_rewrite}+not_old";
      }
       
      ## redirect to m.example.com ##
      if ($mobile_rewrite = "perform+not_old") {
        rewrite ^ https://old.berkeleytime-internal.com redirect;
        break;
      }
spec:
  tls:
  - hosts:
    - www.berkeleytime-internal.com
    - berkeleytime-internal.com 
    - staging.berkeleytime-internal.com
    - jenkins.berkeleytime-internal.com
    - old.berkeleytime-internal.com
    secretName: berkeleytime-tls
  rules:
  - host: www.berkeleytime-internal.com
    http:
      paths:
      - path: /api/
        backend:
          serviceName: berkeleytime-prod-svc
          servicePort: 5000
      - path: /
        backend:
          serviceName: frontend-prod-svc
          servicePort: 3000
  - host: old.berkeleytime-internal.com
    http:
      paths:
      - path: /
        backend:
          serviceName: berkeleytime-prod-svc
          servicePort: 5000
  - host: staging.berkeleytime-internal.com
    http:
      paths:
      - path: /api/
        backend:
          serviceName: berkeleytime-stage-svc
          servicePort: 5000
      - path: /
        backend:
          serviceName: frontend-stage-svc
          servicePort: 3000
  - host: jenkins.berkeleytime-internal.com
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins-svc
          servicePort: 9000
