kubernetes/manifests/infrastructure/protected_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: protected-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Login in with BT Credentials!'
spec:
  tls:
  - hosts:
    - www.berkeleytime.com
    - berkeleytime.com
    - staging.berkeleytime.com
    - jenkins.berkeleytime.com
    - kibana.berkeleytime.com
    - old.berkeleytime.com
    secretName: letsencrypt-bt
  rules:
  - host: kibana.berkeleytime.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: 5601
